[project]
name = "toxicaint"
version = "0.1.0"
description = ""
authors = [
    {name = "Anna Antonenko",email = "portasynthinca3@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "markovify (>=0.9.4,<0.10.0)",
    "lxml (>=5.3.1,<6.0.0)"
]

[tool.poetry]
packages = [{include = "toxicaint", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
